# rust-quant-trading

./: Cargo.toml  README.md  config.json
src/: config.rs  crypto_tools.rs  error.rs  lib.rs  main.rs  trading_system.rs  types.rs
src/data/: binance.rs  mod.rs  tushare.rs
src/exchange/: binance.rs  mod.rs  tushare.rs
src/notification/: dingtalk.rs  mod.rs
src/risk/: mod.rs
src/strategy/: ma_cross.rs  mod.rs
src/strategy/ma_cross/: mod.rs  signal.rs  strategy.rs
