[package]
name = "rust-quant-trading"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.30", features = ["serde"] }
rust_decimal_macros = "1.30"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.13"
thiserror = "1.0"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4.3"
base64 = "0.22.1"